--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -43,7 +43,7 @@ de:
   about_us_team:
     heading: Wer sind wir?
     kalle_html: "Mag vegane Schokoladenkuchen und süße Tiere im Internet. MSc Informationstechnologie und Betriebswirtschaft."
-    cissi_html: "Marketing- und CSR-Manager bei einer internationalen Sportmarke. Abschluss in Business Economics und Studien im Bereich Nachhaltigkeit und Umwelt."
+    cissi_html: Marketing- und CSR-Manager bei einer internationalen Sportmarke. Abschluss in Business Economics und Studien im Bereich Nachhaltigkeit und Umwelt.
     henrik_html: 'Agile & Lean Coach. Schöpfer von <a href="https://youtu.be/3CM_KkDuzGQ">A friendly guide to Climate Change</a>, <a href="http://climate.crisp.se/">Climate Crisplet</a> und <a href="http://carbonmanifesto.org/">Carbon Manifesto</a>'
     stefan_html: Agiler Team- und Organisationscoach. Etwas zu idealistischer Pragmatiker.
     alexandra_html: Umweltwissenschaftler mit langjähriger internationaler Erfahrung. Angetrieben von Neugierde und dem Willen, die Welt zu retten - einen Schritt nach dem anderen. Sie tanzen und laufen durch den Wald, um neue Energie zu tanken.
