--- a/config/locales/views/gift_cards.de.yml
+++ b/config/locales/views/gift_cards.de.yml
@@ -9,6 +9,11 @@ de:
           3: 3 Monate Klimaneutralität.
           6: Ein halbes Jahr Klimaneutralität.
           12: Ein ganzes Jahr Klimaneutralität.
+        cta:
+          1: Choose 1 month
+          3: Choose 3 months
+          6: Choose 6 months
+          12: Choose 12 months
         details_html: "Die Gutscheine basieren auf den durchschnittlichen Emissionen der schwedischen Bevölkerung (11 Tonnen CO <sub>2</sub> -Äq)."
       new:
         intro: Kaufen und personalisieren Sie Ihren Gutschein
