--- a/config/locales/views/projects.eo.yml
+++ b/config/locales/views/projects.eo.yml
@@ -1,9 +1,20 @@
 eo:
   views:
     projects:
+      heading: crwdns14316:0crwdne14316:0
+      latest_projects: crwdns14318:0crwdne14318:0
+      see_all: crwdns14320:0crwdne14320:0
+      how:
+        heading: crwdns14322:0crwdne14322:0
+        1: crwdns14324:0crwdne14324:0
+        2: crwdns14326:0crwdne14326:0
+        3: crwdns14328:0crwdne14328:0
+        4: crwdns14330:0crwdne14330:0
+        5: crwdns14332:0crwdne14332:0
+        read_more: crwdns14334:0crwdne14334:0
       index:
-        read_more_link: crwdns13018:0crwdne13018:0
-        map_link: crwdns13020:0crwdne13020:0
-        invoice: crwdns13022:0crwdne13022:0
-        certificate_link: crwdns13024:0crwdne13024:0
-        map_header: crwdns13026:0crwdne13026:0
+        read_more_link: crwdns14336:0crwdne14336:0
+        map_link: crwdns14338:0crwdne14338:0
+        invoice: crwdns14340:0crwdne14340:0
+        certificate_link: crwdns14342:0crwdne14342:0
+        map_header: crwdns14344:0crwdne14344:0
