New template works with old controller

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -85,7 +85,7 @@ en:
   our_privacy_policy: our Privacy policy
   credit_or_debit_card: Credit or debit card
   add_new_card: Add new card
-  edit_card: edit card
+  edit_card: Edit card
   your_payment_details_have_been_updated: Your settings has been updated
   no_card_registered: No Card Registered
   climate_plan: Climate Plan
