--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -85,7 +85,7 @@ sv:
   our_privacy_policy: integritetspolicyn
   credit_or_debit_card: Kortuppgifter
   add_new_card: Nytt kort
-  edit_card: ändra kort
+  edit_card: Ändra kort
   your_payment_details_have_been_updated: Dina inställningar har uppdaterats
   no_card_registered: Inget kort registrerat
   climate_plan: Kompensation
