--- a/config/locales/views/subscriptions.sv.yml
+++ b/config/locales/views/subscriptions.sv.yml
@@ -8,5 +8,12 @@ sv:
         heading: Avsluta prenumeration
         action: Avsluta prenumeration
         abort: Behåll prenumeration
-        confirm: Är du säker på att du vill avsluta din prenumeration? Du kan återuppta den när du vill.
+        confirm: Tack för att du har varit med och bidragit! Berätta gärna varför du avslutar så att vi kan bli bättre i framtiden.
         cancellation_successful: Din prenumeration har avslutats.
+        cancellation_reasons:
+          price_too_high: Priset är för högt
+          different_finantial_conditions: Mina ekonomiska förutsättningar har ändrats
+          dont_believe_goclimate_makes_difference: Jag tror inte GoClimate gör skillnad för klimatet
+          dont_belive_climate_change: Jag tror inte vi behöver stoppa klimatförändringarna
+          wont_disclose: Jag vill ej ange
+          other: Annat
