--- a/config/locales/views/subscriptions.sv.yml
+++ b/config/locales/views/subscriptions.sv.yml
@@ -4,6 +4,9 @@ sv:
       update:
         heading: Uppdatera prenumeration
         no_subscription: Ingen prenumeration
+      receipts:
+        heading: Kvitton
+        action: Se dina kvitton
       cancel:
         heading: Avsluta prenumeration
         action: Avsluta prenumeration
