Left-justify travel calculator

--- a/config/locales/views/welcome.en.yml
+++ b/config/locales/views/welcome.en.yml
@@ -69,4 +69,4 @@ en:
         train: Train
         subway: Subway
         boat: Boat
-        offset_the_emissions_here: 'Offset the emissions here ->'
+        offset_the_emissions_here: 'Offset the emissions here'
