--- a/config/locales/views/welcome.sv.yml
+++ b/config/locales/views/welcome.sv.yml
@@ -69,4 +69,4 @@ sv:
         train: Tåg
         subway: Tunnelbana
         boat: Båt
-        offset_the_emissions_here: 'Kompensera för utsläppen här ->'
+        offset_the_emissions_here: 'Kompensera för utsläppen här'
