--- a/config/locales/views/welcome.sv.yml
+++ b/config/locales/views/welcome.sv.yml
@@ -3,8 +3,7 @@ sv:
     welcome:
       index:
         hero:
-          heading_alternative: Tillsammans räddar vi klimatet!
-          heading: Prenumerationen som nollar ditt klimatavtryck
+          heading: Tillsammans räddar vi klimatet!
           body_text: Räkna ut ditt avtryck och starta din personliga prenumeration, på under 2 minuter.
         how_it_works:
           bullets:
