--- a/config/locales/devise.views.en.yml
+++ b/config/locales/devise.views.en.yml
@@ -82,6 +82,7 @@ en:
       new:
         sign_up: Sign up
       signed_up: Welcome to a climate neutral life!
+      signed_up_without_subscription: Welcome to GoClimate!
       signed_up_but_inactive: You have signed up successfully. However, we could not sign you in because your account is not yet activated.
       signed_up_but_locked: You have signed up successfully. However, we could not sign you in because your account is locked.
       signed_up_but_unconfirmed: A message with a confirmation link has been sent to your email address. Please follow the link to activate your account.
