--- a/config/locales/views/registrations.en.yml
+++ b/config/locales/views/registrations.en.yml
@@ -20,7 +20,7 @@ en:
       sign_up_description: Sign up to save your result, get support in reducing your footprint, and opt in to carbon offsetting.
       step: Step
       adjust_subscription: Adjust your subscription
-      price_free: Free!
+      price_free: Free
       create_account: Create account
       your_subscription: Your subscription
       number_of_people: Number of people
