--- a/config/locales/views/registrations.sv.yml
+++ b/config/locales/views/registrations.sv.yml
@@ -18,7 +18,7 @@ sv:
       sign_up_description: Bli medlem och spara ditt resultat, få hjälp att minska ditt avtryck och få möjlighet att klimatkompensera.
       step: Steg
       adjust_subscription: Anpassa din prenumeration
-      price_free: Gratis!
+      price_free: Gratis
       create_account: Skapa konto
       your_subscription: Din prenumeration
       number_of_people: Antal personer
