Update copy for short about us footer text

--- a/config/locales/views/shared.en.yml
+++ b/config/locales/views/shared.en.yml
@@ -15,7 +15,7 @@ en:
         body_text: Subscribe to offset your carbon footprint.
         button: Get started
       footer:
-        short_intro: GoClimate is a social company with the sole purpose of making it easier to start living a climate neutral life.
+        short_intro: GoClimate is a social company fighting climate change by reducing greenhouse gas emissions. We always keep climate justice in mind and operate with 100% transparency.
         jobs: 'Jobs'
         headers:
           make_a_difference: Get involved
@@ -24,7 +24,7 @@ en:
       more_info:
         about:
           title: About Us
-          description: GoClimate is a social company with the sole purpose of making it easier to start living a climate neutral life.
+          description: GoClimate is a social company fighting climate change by reducing greenhouse gas emissions. We always keep climate justice in mind and operate with 100% transparency.
           cta: Read more about us
         projects:
           title: Our Climate Projects
