--- a/config/locales/views/shared.sv.yml
+++ b/config/locales/views/shared.sv.yml
@@ -15,7 +15,7 @@ sv:
         body_text: Prenumerera och kompensera för hela ditt klimatavtryck.
         button: Kom igång
       footer:
-        short_intro: GoClimate grundades 2017 med enda syfte att göra det enklare att leva ett klimatneutralt liv.
+        short_intro: GoClimate är ett socialt företag som jobbar för att stoppa klimatförändringarna genom att minska koldioxidutsläppen. Vi har alltid klimaträttvisa i åtanke och arbetar med 100% transparens.
         jobs: 'Jobb'
         headers:
           make_a_difference: Gör skillnad
@@ -24,7 +24,7 @@ sv:
       more_info:
         about:
           title: Om oss
-          description: GoClimate grundades 2017 med enda syfte att göra det enklare att leva ett klimatneutralt liv.
+          description: GoClimate är ett socialt företag som jobbar för att stoppa klimatförändringarna genom att minska koldioxidutsläppen. Vi har alltid klimaträttvisa i åtanke och arbetar med 100% transparens.
           cta: Läs mer om oss
         projects:
           title: Våra klimatprojekt
