Update copy on campaign sign up

--- a/config/locales/views/registrations.en.yml
+++ b/config/locales/views/registrations.en.yml
@@ -43,7 +43,7 @@ en:
       know_your_footprint:
         consist_of:
           heading: What does my carbon footprint consist of?
-          text: The main areas to look at in terms of your footprint are living situation, diet, travelling and means of transportation, as well as shopping and public consumption. Housing and car emissions can differ quite a lot depending on what country you live in, so does public consumption - which includes infrastructure, hospitals, education etc. The areas where most of us can make choices that have a high impact on our carbon footprint in a fairly short amount of time, are generally diet and shopping, as well as looking over how we travel.
+          text: The main areas to look at in terms of your footprint are living situation, diet, travelling and means of transportation, as well as shopping and public consumption. Housing and car emissions can differ quite a lot depending on what country you live in, so does public consumption - which includes infrastructure, hospitals, education etc. The areas where most of us can make choices that have a high impact on our carbon footprint in a fairly short amount of time, are generally diet and shopping, as well as looking over how we travel. The “Public emissions and shopping” part of your carbon footprint can be reduced by roughly between 1-5 tonnes, by making conscious choices and changing your consumption habits.
           text_2: Learn more by signing up and get support in reducing your individual carbon footprint today!
         tips:
           heading: What can I do about this?
