--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -76,6 +76,7 @@ sv:
     alexandra_html: Miljövetare med mycket internationell erfarenhet. Drivs av nyfikenhet och viljan att rädda världen, lite hela tiden. Dansar och springer i skogen för att ladda energi.
     tove_html: Global Strateg med gedigen erfarenhet inom PR & Kommunikation, inte minst från att ha startat och drivit Londonbaserade PR-byrån VARG sedan 2008. Tove jobbar aktivt mot det personliga målet att dela sitt hem med fler omplaceringshundar än vad som är socialt accepterat.
     emma_html: Civilingenjör inom medieteknik med erfarenhet från ett snabbväxande tech-startup. Vill bygga grymma produkter, rädda världen och äta choklad.
+    petter_html: Nyfiken typ med målet inställt på att göra vårt samhälle klimatneutralt och hållbart. Har bakgrund som arkitekt och startup-grundare. Seglar helst av allt.
   blog: Blogg
   we_are_100_transparent: Vi är 100% transparenta.
   section_3_text: Vi är 100% transparenta med vilka både FN-certifierade och Gold Standard-märkta klimatprojekt dina pengar investeras i och varför.
