A/B-test for partners section on index page

--- a/config/locales/views/welcome.en.yml
+++ b/config/locales/views/welcome.en.yml
@@ -35,6 +35,7 @@ en:
           climate_friendly_housing_cooperative: Climate friendly housing cooperative - this is how you make an impact
           climate_friendly_pension_saving: Fossil free pension savings
           read_more: Read more
+        partners: We are proud partners of
         community:
           heading: Meet our community
           people:
