--- a/config/locales/views/welcome.sv.yml
+++ b/config/locales/views/welcome.sv.yml
@@ -35,6 +35,7 @@ sv:
           climate_friendly_housing_cooperative: Klimatsmart bostadsrättsförening - så gör du skillnad
           climate_friendly_pension_saving: Fossilfritt pensionssparande
           read_more: Läs mer
+        partners: Vi är stolta partners till
         community:
           heading: Lär känna våra medlemmar
           people:
