--- a/config/locales/views/shared.en.yml
+++ b/config/locales/views/shared.en.yml
@@ -39,5 +39,6 @@ en:
           description: We want you to feel safe with how your money makes an impact. See our outgoings, making sure that you know where every cent is used.
           cta: See our numbers
       cookie_banner:
-        text: Cookies help us deliver our services. By using our services, you agree to our use of cookies.
-        cta: I consent
+        text: Cookies help us deliver our services. By using our services, you agree to
+        link_text: our use of cookies
+        cta: I agree
